# experimental_qcs

./: .gitignore  Makefile  interactive.py  main.c  main.py  meson.build  optimize.h  plot_speedtest.py  qop.c  qop.h  qstate.c  qstate.h  sampling.c  speed_test.c  speed_test.py  todo.tx  unitaries.c  unitaries.h
src/: speed_test.c
src/lib/: qstate.c  qstate.h  sampling.c  sampling.h  unitaries.c
